[package]

name = "iron-test"
version = "0.0.4"
authors = ["Jonathan Reem <jonathan.reem@gmail.com>"]
description = "Mocking suite for Iron requests."
repository = "https://github.com/reem/iron-test"
license = "MIT"

[dependencies]
uuid = "*"
url = "*"
intovec = "*"

[dependencies.iron]
git = "https://github.com/jihokoo/iron.git"

[dependencies.hyper]
git = "https://github.com/jihokoo/hyper.git"
